color contrast fix and html audits

--- a/styles/base.css
+++ b/styles/base.css
@@ -31,7 +31,7 @@ ul li a {
     display: flex;
     padding: 15px;
     text-decoration: none;
-    color:#344e41;
+    color:#062409;
     font-weight: 600;
     margin: 0 10px;
     position: relative;
